# precomp-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.32  Makefile.osx  README.md  appveyor.yml  changes_before_git.txt  decompress.c  dlltest.cpp  gif_lib_private.h  make.bat  make.sh  make64prof.bat  makecomf.bat  makeprof.bat  precomp.cpp  precomp.h  precomp_dll.h  readme.txt
.github/: FUNDING.yml
contrib/brunsli/c/common/: platform.h
contrib/brunsli/c/dec/: brunsli_decode.cc  state.h
contrib/brunsli/c/enc/: brunsli_encode.cc  state.h
contrib/brunsli/c/include/brunsli/: brunsli_decode.h  brunsli_encode.h
contrib/bzip2/: Makefile  Makefile.32  bzlib.c  decompress.c
contrib/giflib/: Makefile  Makefile.32  dgif_lib_gcc.c  egif_lib_gcc.c  gif_err.c  gif_lib.h  precomp_gif.h
contrib/liblzma/: Makefile  Makefile.32  compress_easy_mt.cpp  decompress.cpp  liblzma.txt  lzma_dll.txt  precomp_xz.h
contrib/liblzma/api/lzma/: container.h
contrib/liblzma/common/: stream_encoder_mt.c  sysdefs.h  sysdefs_schnaader.h
contrib/liblzma/rangecoder/: range_common.h  range_encoder.h
contrib/packjpg/: Makefile  Makefile.32  Makefile_dll  aricoder.h  bitops.cpp  howtocompile.txt  icon.res  packJPGlib.h  packjpg.cpp  pjpgtbl.h  precomp_jpg.h
contrib/packmp3/: Makefile  Makefile.32  huffmp3.cpp  huffmp3.h  huffmp3tbl.h  packmp3.cpp  packmp3lib.h  pmp3bitlen.h  pmp3tbl.h  precomp_mp3.h
contrib/preflate/: Makefile  README.md  main.cpp  main2.cpp  preflate.h  preflate_block_decoder.cpp  preflate_block_decoder.h  preflate_block_reencoder.cpp  preflate_block_reencoder.h  preflate_block_trees.cpp  preflate_block_trees.h  preflate_checker.cpp  preflate_checker.h  preflate_complevel_estimator.cpp  preflate_complevel_estimator.h  preflate_constants.cpp  preflate_constants.h  preflate_decoder.cpp  preflate_decoder.h  preflate_dumper.cpp  preflate_dumper.h  preflate_hash_chain.cpp  preflate_hash_chain.h  preflate_info.cpp  preflate_info.h  preflate_input.h  preflate_parameter_estimator.cpp  preflate_parameter_estimator.h  preflate_parser_config.cpp  preflate_parser_config.h  preflate_predictor_state.cpp  preflate_predictor_state.h  preflate_reencoder.cpp  preflate_reencoder.h  preflate_seq_chain.cpp  preflate_seq_chain.h  preflate_statistical_codec.cpp  preflate_statistical_codec.h  preflate_statistical_debug.cpp  preflate_statistical_model.cpp  (+9 more)
contrib/preflate/packARI/: .gitignore  README.md
contrib/preflate/packARI/source/: Makefile  aricoder.cpp  bitops.h  icons.res  packari.cpp  packaridll.h  packarilib.h  paritbl.h
contrib/preflate/support/: arithmetic_coder.cpp  arithmetic_coder.h  array_helper.cpp  array_helper.h  bit_helper.cpp  bit_helper.h  bitstream.cpp  bitstream.h  const_division.cpp  const_division.h  filestream.cpp  filestream.h  huffman_decoder.cpp  huffman_decoder.h  huffman_encoder.cpp  huffman_encoder.h  huffman_helper.cpp  huffman_helper.h  memstream.cpp  memstream.h  outputcachestream.cpp  outputcachestream.h  stream.h  support_tests.cpp  support_tests.h  task_pool.cpp  task_pool.h
contrib/zlib/: Makefile  Makefile.32  zutil.c
include/packjpg/: Makefile.linux  Makefile.win  aricoder.cpp  aricoder.h  bitops.h  dct8x8.h  htables.h  packJPGdll.h  packJPGlib.h  packjpg.cpp
vs2012/: Precomp_2010.sln  precomp_2008.sln
vs2012/Precomp/: Precomf.vcxproj  Precomf.vcxproj.filters  Precomf15.vcxproj  Precomf15_0.sln  Precomp.vcxproj  Precomp.vcxproj.filters  precomf.vcproj
vs2012/Precomp/msinttypes/: _source.txt
vs2012/paq8o8pre/: PAQ7ASM.asm  paq8o8pre.cpp  paq8o8pre.vcproj  precomp_dll.vcproj
vs2015/Precomp/: Precomp.sln  Precomp.vcxproj  Precomp.vcxproj.filters
